--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-    </head>
-    <body>
-        Chat App
-        <button id="increment">+1</button>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/chat.js"></script>
-    </body>
+<head>
+
+</head>
+
+<body>
+	Chat App
+
+	<form id="message-form">
+		<input name="message" placeholder="Message">
+		<button>Send</button>
+	</form>
+
+	<script src="/socket.io/socket.io.js"></script>
+	<script src="/js/chat.js"></script>
+</body>
+
 </html>
